// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css composes 1`] = `"css-cls1-vyoujf-va5xsk css-cls1-vyoujf"`;

exports[`css composes 2`] = `"css-cls2-1qb2ovg-1em6aur css-cls2-1qb2ovg css-cls1-vyoujf-va5xsk css-cls1-vyoujf"`;

exports[`css composes 3`] = `
".css-cls1-vyoujf-va5xsk { display: -webkit-box; display: -moz-box; display: -ms-flexbox; display: -webkit-flex; display: flex; }.css-cls2-1qb2ovg-1em6aur {
      -webkit-justify-content: center;
      -ms-flex-pack: center;
      -webkit-box-pack: center;
      justify-content: center; }"
`;

exports[`css composes with objects 1`] = `"css-ykfdbj"`;

exports[`css composes with objects 2`] = `"css-cls2-1qb2ovg-1em6aur css-cls2-1qb2ovg css-ykfdbj"`;

exports[`css composes with objects 3`] = `
".css-cls1-vyoujf-va5xsk { display: -webkit-box; display: -moz-box; display: -ms-flexbox; display: -webkit-flex; display: flex; }.css-cls2-1qb2ovg-1em6aur {
      -webkit-justify-content: center;
      -ms-flex-pack: center;
      -webkit-box-pack: center;
      justify-content: center; }.css-ykfdbj{display:flex}"
`;

exports[`css handles objects 1`] = `"css-ykfdbj"`;
